--- a/osse-demo.ipynb
+++ b/osse-demo.ipynb
@@ -63,6 +63,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    !wget https://raw.githubusercontent.com/aria-verify/osse-demo/refs/heads/main/requirements.txt\n",
+    "    !pip install -r requirements.txt\n",
+    "except ImportError:\n",
+    "    pass\n",
+    "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import jaxopt\n",
@@ -1024,11 +1031,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "verify",
-   "language": "python",
-   "name": "verify"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
